improved css for profile page.

--- a/css/app.css
+++ b/css/app.css
@@ -298,6 +298,26 @@ a:hover {
     font-weight: bolder;
 }
 
+.spouseInfoTitleLabel {
+    font-size: 1.3em;
+    font-weight: bold;
+    color: forestgreen;
+}
+
+.spouseInfoTitleDetail {
+    font-size: 1.3em;
+    color: forestgreen;
+}
+
+.infoTitleLabel {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+.infoTitleDetail {
+    font-size: 1.3em;
+}
+
 .altDetailParentName {
     font-size: 1.5em;
     font-weight: bolder;
