corrected ad footer css.

--- a/css/app.css
+++ b/css/app.css
@@ -27,6 +27,10 @@ a:hover {
     z-index: 1;
 }
 
+.navbar-fixed-bottom {
+    z-index: 1;
+}
+
 .homeData {
     margin-top: 5em;
     margin-bottom: 6em;
