--- a/css/app.css
+++ b/css/app.css
@@ -23,11 +23,7 @@ a:hover {
     text-decoration: none;
 }
 
-.navbar-fixed-top {
-    z-index: 1;
-}
-
-.navbar-fixed-bottom {
+.navbar-fixed-top, .navbar-fixed-bottom {
     z-index: 1;
 }
 
@@ -36,7 +32,7 @@ a:hover {
     margin-bottom: 6em;
 }
 
-.homeContent{
+.homeContent {
     margin-top: 4em;
 }
 
@@ -372,4 +368,22 @@ span.Icon {
 
 .panel-group {
     font-size: large;
+}
+
+/* Search Page */
+.searchBlock {
+    border-style: outset;
+    border-radius: 1.5em;
+    border-top-color: #e7e7e7;
+    border-left-color: #e7e7e7;
+    border-right-color: #ffffff;
+    border-bottom-color: #ffffff;
+    padding-top: 1.5em;
+    padding-bottom: 0.5em;
+    margin-left: 0em;
+    margin-right: 0em;
+}
+
+.searchHeaderFont {
+    font-size: x-large;
 }
